# studio-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CREDO.md  HANDOFF.md  README.md  USAGE.md  pyproject.toml  test_forward_delivery_contract.py
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
docs/: INTRODUCTION.md
docs/brand/: README.md
docs/design/: 2026-06-21-strand-substrate.md  2026-06-22-shared-frame-showcase.md  SUBSTRATE-MAP.md
docs/plans/: 2026-06-21-strand-substrate.md
handoff/: ENDPOINTS.md  INTEGRATION.md  openapi.json  reference-chamber.html  types.ts  watch-it-think.html
handoff/examples/: gallery.json  library.json  program.gyroid.json  scene.phyllotaxis.json  simulate-request.json  world.composite.json  world.gyroid.json  world.phyllotaxis.json
project-docs/specs/: SPEC-studio-engine-forward-delivery.md
showcase/: README.md  build_fixtures.py  dialogue.js  engine.js  eye.js  index.html  media.js  render.js  showcase.js  verdict.js
showcase/tests/: dialogue.test.mjs  engine.test.mjs  eye.test.mjs  verdict.test.mjs
showcase/worlds/: gyroid.json  phyllotaxis.json  quasicrystal.json
studio_engine/: __init__.py  __main__.py  certify.py  compose.py  corpus.py  criteria.py  engine.py  model.py  native_render.py  raster_renderer.py  registry.py  server.py  session.py  temporal.py
studio_engine/organs/: __init__.py  attractor.py  fields.py  flowfield.py  geometry.py  harmonograph.py  metaballs.py  moire.py  palette.py  program.py  raster.py  rings.py  sonify.py  turbulence.py
studio_engine/strand/: __init__.py  expr.py  glsl.py  recipe.py  webaudio.py
tests/: __init__.py  test_certify.py  test_compose.py  test_corpus.py  test_criteria.py  test_engine.py  test_model.py  test_native_render.py  test_organ_exprs.py  test_organ_recipes.py  test_organs.py  test_program.py  test_raster_renderer.py  test_server.py  test_session.py  test_sse_step_contract.py  test_strand_expr.py  test_strand_glsl.py  test_strand_recipe.py  test_strand_webaudio.py  test_temporal.py  test_watch_it_think.py  test_world_contract.py
