[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "studio-engine"
version = "0.2.0"
description = "Native, zero-dependency creative-verification engine — witnessed Worlds (self-describing GLSL/audio render programs) for an experience-chamber frontend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["generative", "verification", "accountability", "creative", "rendering", "zero-dependency", "glsl", "webaudio", "shader", "compositor", "oklab", "phyllotaxis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Artistic Software",
]
dependencies = []

[project.scripts]
studio-engine = "studio_engine.server:serve"

[tool.setuptools.packages.find]
where = ["."]
include = ["studio_engine*"]
